chore: consolidate concurrent multi-agent working tree
Lands the in-flight tree on feature/eval-robustness per request. Bundles the
concurrent multi-agent work that shares files: ctx ns-selection + findings-
removal tail, handlers (eval/message), render, agent_view, agent/inspect, the
db layer (db.clj, db/internal.cljs, datahike schema + test), embeddings
(embed.clj), the datahike-sync deps.edn + clojure-mcp submodule pointer, and
the agent-runtime design/research docs.

Excluded (not vendorable as plain files): the untracked reference-code/*
embedded git checkouts (anthropic-sdk-typescript, datahike, java-genai,
js-genai, posh) — the datahike-sync agent registers those as submodules.

Known follow-up: warn.cljs:611-613 (check-failed-evals) still names the retired
(result ...) fn; committed as-is (actively owned by another agent) — should be
reworded to point at the inline => X transcript error.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>